--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
 </head>
 
 <body>
-  div.column
+
+  <div class="lcolumn column">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate reprehenderit iure fugit inventore dolores
+      repudiandae eligendi quod autem sit aut neque veritatis odit minima culpa, nam nemo amet magni animi, perferendis
+      perspiciatis fugiat!
+    </p>
+  </div>
+
+  <div class="ccolumn column">
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima voluptate ipsa unde, consequatur consectetur sed
+      libero, aliquam minus, et praesentium qui numquam. Aspernatur totam accusamus maiores earum at eum sint voluptas
+      eveniet neque magnam, debitis pariatur, reprehenderit, laudantium doloremque dolores delectus quam.</p>
+    </p>
+  </div>
+
+  <div class="rcolumn column">
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab ex dolorum cumque accusamus consectetur reiciendis
+      vitae maiores praesentium, molestias odit quam voluptatem placeat aliquam! In, dolorum accusantium adipisci
+      voluptatem placeat cumque deserunt, dolores, quam perspiciatis totam dignissimos quaerat excepturi!</p>
+  </div>
 </body>
-<div class="column1">
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate reprehenderit iure fugit inventore dolores
-    repudiandae eligendi quod autem sit aut neque veritatis odit minima culpa, nam nemo amet magni animi, perferendis
-    perspiciatis fugiat!
-  </p>
-</div>
-
-<div class="column1">
-  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima voluptate ipsa unde, consequatur consectetur sed
-    libero, aliquam minus, et praesentium qui numquam. Aspernatur totam accusamus maiores earum at eum sint voluptas
-    eveniet neque magnam, debitis pariatur, reprehenderit, laudantium doloremque dolores delectus quam.</p>
-  </p>
-</div>
-
-<div class="column">
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab ex dolorum cumque accusamus consectetur reiciendis
-    vitae maiores praesentium, molestias odit quam voluptatem placeat aliquam! In, dolorum accusantium adipisci
-    voluptatem placeat cumque deserunt, dolores, quam perspiciatis totam dignissimos quaerat excepturi!</p>
-</div>
 
 </html>
